# auto-podcast-slicer

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  _rebuild_log.txt  autoresearch_fix.py  final_verification.py  find_fencha.py  make_clips.py  make_fencha_clips.py  make_full_project.py  make_short_videos_v2.py  make_time_clips.py  make_wiki_clips.py  program.md  pyproject.toml
.claude/: managed-projects.example.yaml  managed-projects.yaml
archive/: _audit_collect.py  _audit_content.py  _audit_raw.json  _audit_report.json  _audit_report_final.json  _audit_report_v2.json  _audit_subtitles.py  _audit_subtitles.txt  _audit_subtitles_v2.txt  _audit_tech.py  _audit_tech.txt  _check_bitrate.py  _check_errata.py  _clean_vertical.py  _full_audit.py  _full_audit_data.json  _gen_release_cards.py  _generate_report.py  _rebuild_log.txt  _regen_vertical.py  _verify_source.py  _vertical_bitrate.txt  _vertical_regen_log.txt  final_verification.py  find_time_clips.py  make_fencha_clips.py  make_time_clips.py
autoresearch/: __init__.py  experiment.py  logger.py  metrics.py  strategies.py
config/: corrections.yaml  default.yaml  platforms.yaml  quality_standards.yaml  sources.yaml
pipeline/: __init__.py  alignment_verifier.py  audio_processor.py  audio_verifier.py  clip_planning.py  clip_processor.py  config.py  content_validator.py  errata_engine.py  exporter.py  fallback_t2s.json  ingest.py  loader.py  loudness_normalizer.py  quality_checker.py  subtitle_content.py  subtitle_formatter.py  subtitle_generator.py  subtitle_merger.py  subtitle_renderer.py  subtitle_style.py  (+7 more)
(+77 files in other folders)
